# Kudokuten-Convert

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  vercel.json  vite.config.js
api/: main.py  pyproject.toml  requirements.txt
api/convert/: convert.py
backend/: index.js  main.py  pyproject.toml  requirements.txt
backend/convert/: convert.py
docker/: backend.dockerfile  docker-compose.yml  dockerfile  frontend.dockerfile  nginx.conf  supervisord.conf
frontend/: vercel.json  vite.config.js
frontend/src/components/: ConvertKudokuten.jsx  Header.jsx  convertkudokuten.css
frontend/src/routes/: App.jsx
src/components/: ConvertKudokuten.jsx  convertkudokuten.css
